--- a/src/CPSI.Site/Views/Inicial/Inicial.cshtml
+++ b/src/CPSI.Site/Views/Inicial/Inicial.cshtml
@@ -10,6 +10,10 @@
 <div class="row center">
     <h5 class="header col s12 light">Centro de Promoção a Saúde do Idoso</h5>
 </div>
+<br>
+<br>
 
-<br>
-<br>
+
+@section Scripts {
+    
+}
