Adição de navegação para a aba de módulos

--- a/src/CPSI.Site/Views/Shared/_layout.cshtml
+++ b/src/CPSI.Site/Views/Shared/_layout.cshtml
@@ -17,7 +17,7 @@
     <header>
         <nav class="light-blue darken-1">
             <div class="nav-wrapper container">
-                <a id="logo-container" href="#" class="brand-logo">CPSI</a>
+                <a id="logo-container" asp-action="Modulos" asp-controller="Inicial" class="brand-logo">CPSI</a>
                 <ul class="right">
                     <partial name="_LoginPartial" />
                 </ul>
