Correção na nomeclatura das referências

--- a/src/Educar.Site/Areas/Diretor/Views/_viewimports.cshtml
+++ b/src/Educar.Site/Areas/Diretor/Views/_viewimports.cshtml
@@ -1,3 +1,3 @@
-﻿@using CPSI.Site
+﻿@using Educar.Site
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, CPSI.Site
+@addTagHelper *, Educar.Site
