--- a/src/Educar.Site/Views/_viewimports.cshtml
+++ b/src/Educar.Site/Views/_viewimports.cshtml
@@ -1,4 +1,4 @@
-﻿@using CPSI.Site
+﻿@using Educar.Site
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, CPSI.Site
+@addTagHelper *, Educar.Site
