Refletindo mudança na nomeclatura dos viewImports do projeto

--- a/src/Educar.Site/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/src/Educar.Site/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using CPSI.Site.Areas.Identity
-@using CPSI.Site.Areas.Identity.Pages
+@using Educar.Site.Areas.Identity
+@using Educar.Site.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
