Mudança de nomenclatura em todas as views

--- a/src/Educar.Site/Areas/Diretor/Views/Disciplinas/Detalhar.cshtml
+++ b/src/Educar.Site/Areas/Diretor/Views/Disciplinas/Detalhar.cshtml
@@ -1,4 +1,4 @@
-﻿@model CPSI.Negocio.Modelo.Disciplina
+﻿@model Educar.Negocio.Modelo.Disciplina
 
 @{
     ViewData["Title"] = "Detalhes da Disciplina";
