--- a/src/Educar.Site/Areas/Diretor/Views/Disciplinas/Listar.cshtml
+++ b/src/Educar.Site/Areas/Diretor/Views/Disciplinas/Listar.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CPSI.Negocio.Modelo.Disciplina>
+﻿@model IEnumerable<Educar.Negocio.Modelo.Disciplina>
 
 @{
     ViewData["Title"] = "Disciplinas";
