--- a/src/Educar.Site/Areas/Diretor/Views/Shared/_DisciplinasPartial.cshtml
+++ b/src/Educar.Site/Areas/Diretor/Views/Shared/_DisciplinasPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model CPSI.Negocio.Modelo.Turma
+﻿@model Educar.Negocio.Modelo.Turma
 
 @{ 
     //Validação para definir se a turma não tem disciplina selecionada
