--- a/src/Educar.Site/Areas/Diretor/Views/Shared/_layout.cshtml
+++ b/src/Educar.Site/Areas/Diretor/Views/Shared/_layout.cshtml
@@ -17,7 +17,7 @@
 
     <nav class="light-blue darken-1">
         <div class="nav-wrapper container">
-            <a asp-action="Modulos" asp-controller="Inicial" class="brand-logo">CPSI</a>
+            <a asp-action="Modulos" asp-controller="Inicial" class="brand-logo">Educar</a>
             <ul class="right">
                 <partial name="_LoginPartial" />
             </ul>
