--- a/src/Educar.Site/Areas/Diretor/Views/Turmas/Listar.cshtml
+++ b/src/Educar.Site/Areas/Diretor/Views/Turmas/Listar.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CPSI.Negocio.Modelo.Turma>
+﻿@model IEnumerable<Educar.Negocio.Modelo.Turma>
 
 @{
     ViewData["Title"] = "Turmas";
