--- a/src/Educar.Site/Views/Inicial/Inicial.cshtml
+++ b/src/Educar.Site/Views/Inicial/Inicial.cshtml
@@ -6,7 +6,7 @@
 <br>
 <br>
 
-<h1 class="header center orange-text">CPSI</h1>
+<h1 class="header center orange-text">Educar</h1>
 <div class="row center">
     <h5 class="header col s12 light">Centro de Promoção a Saúde do Idoso</h5>
 </div>
