--- a/src/Educar.Site/Areas/Diretor/Views/Turmas/Cadastrar.cshtml
+++ b/src/Educar.Site/Areas/Diretor/Views/Turmas/Cadastrar.cshtml
@@ -7,7 +7,7 @@
 <h4>Turma</h4>
 <hr />
 
-        <form asp-action="Cadastrar" method="post" asp-route-id="@Model.Id">
+        <form asp-action="Cadastrar" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="input-field">
                 <label asp-for="Nome" class="control-label"></label>
